# WebServer

./: .gitignore  CMakeLists.txt  Dockerfile
pages/: index.html
src/: config.h  httpParser.cpp  httpParser.h  httpResponse.cpp  httpResponse.h  json.h  main.cpp  socket.cpp  socket.h
